--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "axios": "^0.19.0",
     "cross-env": "^5.2.0",
     "date": "^1.0.2",
     "date-fns": "^2.0.1",
+    "dinero.js": "^1.6.0",
     "express": "^4.16.4",
     "firebase": "^6.4.2",
     "fns": "^1.0.0",
