--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fns": "^1.0.0",
     "import-from": "^3.0.0",
     "nuxt": "^2.0.0",
+    "sharp": "^0.23.0",
     "vuefire": "^2.1.2"
   },
   "devDependencies": {
